# Ketab_e_Man

./: .gitignore  CMakeLists.txt  loginwindow.h  loginwindow.ui  main.cpp  resources.qrc  signinwindow.cpp  signinwindow.h  signinwindow.ui  uml.drawio  uml2.drawio  usersignupwindow.cpp  usersignupwindow.h  usersignupwindow.ui
User/: User.cpp  User.h
User/Admin/: Admin.cpp  Admin.h
User/NormalUser/: NormalUser.cpp  NormalUser.h
